MODFIN-283 migrated to vertx Future