@@ -1,5 +1,11 @@
 package org.folio.services.fund;
 
+import static java.util.stream.Collectors.toList;
+import static org.folio.rest.util.HelperUtils.collectResultsOnSuccess;
+
+import java.util.List;
+import java.util.stream.Collectors;
+
 import org.apache.commons.lang3.StringUtils;
 import org.folio.models.FundCodeExpenseClassesHolder;
 import org.folio.rest.core.models.RequestContext;
@@ -17,13 +23,7 @@ import org.folio.services.fiscalyear.FiscalYearService;
 import org.folio.services.ledger.LedgerDetailsService;
 import org.folio.services.ledger.LedgerService;
 
-import java.util.ArrayList;
-import java.util.List;
 import io.vertx.core.Future;
-import java.util.stream.Collectors;
-
-import static java.util.stream.Collectors.toList;
-import static org.folio.rest.util.HelperUtils.collectResultsOnSuccess;
 
 
 public class FundCodeExpenseClassesService {
@@ -35,7 +35,6 @@ public class FundCodeExpenseClassesService {
   private final FiscalYearService fiscalYearService;
   private final LedgerDetailsService ledgerDetailsService;
   private final ExpenseClassService expenseClassService;
-  private FiscalYear fiscalYear;
 
   public FundCodeExpenseClassesService(BudgetService budgetService, BudgetExpenseClassService budgetExpenseClassService,
                                        FundService fundService, LedgerService ledgerService,
@@ -60,9 +59,9 @@ public class FundCodeExpenseClassesService {
     } else {
       return ledgerService.retrieveLedgers(StringUtils.EMPTY, 0, Integer.MAX_VALUE, requestContext)
         // LedgersCollection
-        .thenCompose(ledgersCollection -> getFiscalYearList(ledgersCollection.getLedgers(), requestContext))
-        .thenCompose(fiscalYearList -> buildFundCodeExpenseClassesCollection(fiscalYearList, fundCodeExpenseClassesHolder, requestContext))
-        .map(fundCodeExpenseClassesCollectionList -> buildCollection(fundCodeExpenseClassesCollectionList));
+        .compose(ledgersCollection -> getFiscalYearList(ledgersCollection.getLedgers(), requestContext))
+        .compose(fiscalYearList -> buildFundCodeExpenseClassesCollection(fiscalYearList, fundCodeExpenseClassesHolder, requestContext))
+        .map(this::buildCollection);
     }
   }
 
@@ -75,8 +74,7 @@ public class FundCodeExpenseClassesService {
 
   public Future<List<FundCodeExpenseClassesCollection>> buildFundCodeExpenseClassesCollection(List<FiscalYear> fiscalYearList,
                                                                                         FundCodeExpenseClassesHolder fundCodeExpenseClassesHolder, RequestContext requestContext) {
-    List<FiscalYear> separatedFiscalYears = new ArrayList<>();
-    separatedFiscalYears = fiscalYearList.stream().distinct().collect(Collectors.toList());
+    List<FiscalYear> separatedFiscalYears = fiscalYearList.stream().distinct().toList();
     List<Future<FundCodeExpenseClassesCollection>> completeFutures = separatedFiscalYears.stream()
       .map(fiscalYr -> getFundCodeVsExpenseClassesWithFiscalYear(fiscalYr, fundCodeExpenseClassesHolder, requestContext))
       .collect(Collectors.toList());
@@ -100,30 +98,29 @@ public class FundCodeExpenseClassesService {
     String fiscalYearCode = fiscalYearUnit.getCode();
     return fiscalYearService.getFiscalYearByFiscalYearCode(fiscalYearCode, requestContext)
       .map(fundCodeExpenseClassesHolder::setFiscalYear)
-      .thenCompose(fundCodeExpenseClassesHolderWithFiscalYear -> getActiveBudgetsByFiscalYear(fundCodeExpenseClassesHolderWithFiscalYear.getFiscalYear(), requestContext))
+      .compose(fcecHolder -> getActiveBudgetsByFiscalYear(fcecHolder.getFiscalYear(), requestContext))
       .map(fundCodeExpenseClassesHolder::withBudgetCollectionList)
-      .map(holder -> holder.getBudgetCollection().getBudgets().stream().map(budget -> budget.getFundId()).distinct().collect(Collectors.toList()))
-      .thenCompose(fundsId -> fundService.getFunds(fundsId, requestContext))
+      .map(holder -> holder.getBudgetCollection().getBudgets().stream().map(Budget::getFundId).distinct().collect(Collectors.toList()))
+      .compose(fundsId -> fundService.getFunds(fundsId, requestContext))
       .map(fundCodeExpenseClassesHolder::withFundList)
-      .map(holder -> holder.getFundList().stream().map(Fund::getLedgerId).collect(toList()))
-      .thenCompose(ledgerIds -> ledgerService.getLedgers(ledgerIds, requestContext))
+      .map(fcecHolder -> fcecHolder.getFundList().stream().map(Fund::getLedgerId).collect(toList()))
+      .compose(ledgerIds -> ledgerService.getLedgers(ledgerIds, requestContext))
       .map(fundCodeExpenseClassesHolder::withLedgerList)
-      .thenCompose(v -> retrieveFundCodeVsExpenseClasses(requestContext, fundCodeExpenseClassesHolder));
+      .compose(fcecHolder -> retrieveFundCodeVsExpenseClasses(requestContext, fundCodeExpenseClassesHolder));
   }
 
   public Future<FundCodeExpenseClassesCollection> retrieveFundCodeVsExpenseClasses(RequestContext requestContext,
                                                                                               FundCodeExpenseClassesHolder fundCodeExpenseClassesHolder) {
-    return fundCodeExpenseClassesHolder.getFiscalYearFuture()
-      .thenCompose(fiscalYear -> getActiveBudgetsByFiscalYear(fiscalYear, requestContext))
+    return getActiveBudgetsByFiscalYear(fundCodeExpenseClassesHolder.getFiscalYear(), requestContext)
       // Future<BudgetsCollection>
       .map(budgetsCollection -> budgetsCollection.getBudgets()
         .stream()
         .map(Budget::getId)
         .collect(toList()))
       .map(fundCodeExpenseClassesHolder::withBudgetIds)
-      .thenCompose(holder -> budgetExpenseClassService.getBudgetExpensesClass(holder.getBudgetIds(), requestContext))
+      .compose(holder -> budgetExpenseClassService.getBudgetExpensesClass(holder.getBudgetIds(), requestContext))
       .map(fundCodeExpenseClassesHolder::withBudgetExpenseClassList)
-      .thenCompose(holder -> expenseClassService.getExpenseClassesByBudgetIds(holder.getBudgetIds(), requestContext))
+      .compose(holder -> expenseClassService.getExpenseClassesByBudgetIds(holder.getBudgetIds(), requestContext))
       .map(fundCodeExpenseClassesHolder::withExpenseClassList)
       .map(FundCodeExpenseClassesHolder::buildFundCodeVsExpenseClassesTypeCollection);
   }
