@@ -1,12 +1,12 @@
 package org.folio.services.group;
 
+import static io.vertx.core.Future.succeededFuture;
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.toList;
 
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import io.vertx.core.Future;
 import java.util.stream.Collectors;
 
 import javax.money.CurrencyUnit;
@@ -14,6 +14,7 @@ import javax.money.Monetary;
 import javax.money.MonetaryAmount;
 
 import org.apache.commons.lang3.StringUtils;
+import org.folio.okapi.common.GenericCompositeFuture;
 import org.folio.rest.core.models.RequestContext;
 import org.folio.rest.jaxrs.model.ExpenseClass;
 import org.folio.rest.jaxrs.model.GroupExpenseClassTotal;
@@ -25,6 +26,8 @@ import org.folio.services.ExpenseClassService;
 import org.folio.services.transactions.CommonTransactionService;
 import org.javamoney.moneta.Money;
 import org.javamoney.moneta.function.MonetaryFunctions;
+
+import io.vertx.core.Future;
 
 public class GroupExpenseClassTotalsService {
 
@@ -40,17 +43,17 @@ public class GroupExpenseClassTotalsService {
 
   public Future<GroupExpenseClassTotalsCollection> getExpenseClassTotals(String groupId, String fiscalYearId, RequestContext requestContext) {
     return groupFundFiscalYearService.getGroupFundFiscalYearsWithBudgetId(groupId, fiscalYearId, requestContext)
-      .thenCompose(groupFundFiscalYearCollection -> getGroupExpenseClassTotals(groupFundFiscalYearCollection, fiscalYearId, requestContext));
+      .compose(groupFundFiscalYearCollection -> getGroupExpenseClassTotals(groupFundFiscalYearCollection, fiscalYearId, requestContext));
   }
 
   private Future<GroupExpenseClassTotalsCollection> getGroupExpenseClassTotals(List<GroupFundFiscalYear> groupFfys, String fiscalYearId, RequestContext requestContext) {
     if (groupFfys.isEmpty()) {
       return succeededFuture(new GroupExpenseClassTotalsCollection().withTotalRecords(0));
     }
-
-    return getTransactions(groupFfys, fiscalYearId, requestContext)
-      .thenCombine(getExpenseClasses(groupFfys, requestContext),
-        (transactions, expenseClasses) -> buildGroupExpenseClassesTotals(expenseClasses, transactions));
+    var transactions = getTransactions(groupFfys, fiscalYearId, requestContext);
+    var expenseClasses = getExpenseClasses(groupFfys, requestContext);
+    return GenericCompositeFuture.join(List.of(transactions, expenseClasses))
+      .map(cf -> buildGroupExpenseClassesTotals(expenseClasses.result(), transactions.result()));
   }
 
   private Future<List<Transaction>> getTransactions(List<GroupFundFiscalYear> groupFundFiscalYears, String fiscalYearId, RequestContext requestContext) {
@@ -72,7 +75,7 @@ public class GroupExpenseClassTotalsService {
     List<Transaction> paymentsCredits = transactions.stream()
             .filter(transaction -> transaction.getTransactionType() == Transaction.TransactionType.PAYMENT
                     || transaction.getTransactionType() == Transaction.TransactionType.CREDIT)
-            .collect(toList());
+            .toList();
 
     double expendedGrandTotal = calculateTransactionsAmount(paymentsCredits);
 
